# SysY2022-ARMv7-Compiler

./: README.md
src/: .gitignore  CMakeLists.txt  main.cpp  testall.sh
src/backend/: CMakeLists.txt
src/backend/alloc/: color.cpp  color.hpp  regalloc.cpp  regalloc.hpp
src/backend/canon/: canon.cpp  canon.hpp
src/backend/cfg/: assem_bg.cpp  assem_bg.hpp  bg.cpp  bg.hpp  flowgraph.cpp  flowgraph.hpp  graph.cpp  graph.hpp  ig.cpp  ig.hpp
src/backend/optimizer/: am.cpp  am.hpp  cdg.cpp  cdg.hpp  cp.cpp  cp.hpp  de.cpp  de.hpp  fi.cpp  fi.hpp  gcm.cpp  gcm.hpp  gvc.cpp  gvc.hpp  gvn.cpp  gvn.hpp  loop.cpp  loop.hpp  mc.cpp  mc.hpp  pattern.cpp  peephole.cpp  peephole.hpp  rp.cpp  rp.hpp
src/backend/ssa/: build_ssa.cpp  build_ssa.hpp  domi_tree.cpp  domi_tree.hpp
src/frontend/: CMakeLists.txt  lexer.cpp  lexer.hpp  lexer.lex  parser.cpp  parser.hpp  parser.yy
src/structure/: CMakeLists.txt
src/structure/assem/: assem.cpp  assem.hpp
src/structure/ast/: ast.cpp  ast.hpp
src/structure/mir/: mir.cpp  mir.hpp  mir2assem.cpp  mirdefuse.cpp  mirfix.cpp  mirflatten.cpp  mirprint.cpp
src/utils/: CMakeLists.txt  entry.hpp  table.cpp  table.hpp  temp.cpp  temp.hpp  utils.hpp
