cmake_minimum_required(VERSION 3.12)

project(CompilerFrontend
        VERSION 0.0
        DESCRIPTION "CompilerFrontend"
        LANGUAGES C CXX
)

if(POLICY CMP0076)
  cmake_policy(SET CMP0076 NEW)
endif()

# enable c++17 globally
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_library(FRONTEND)
target_sources(
    FRONTEND
PRIVATE
    lexer.cpp parser.cpp
)
target_include_directories(
    FRONTEND
PUBLIC
    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/frontend>
    $<INSTALL_INTERFACE:include>
)
target_link_libraries(
    FRONTEND
PRIVATE
    AST
)  
